--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: CodingCoder Blog
+name: CODING CODER
 
 # Short bio or description (displayed in the header)
-description: Coding Coder
+description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -84,3 +84,5 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+  - node_modules
+  - .idea
